@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2022 Obeo.
+ * Copyright (c) 2022, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -57,7 +57,7 @@ const useToolbarStyles = makeStyles((theme) => ({
   },
   button: {
     color: theme.palette.primary.light,
-    '&.Mui-selected': {
+    '&.Mui-selected:not(:disabled)': {
       color: theme.palette.primary.main,
     },
   },
@@ -250,6 +250,7 @@ export const ToolbarPlugin = ({ readOnly }: ToolbarPluginProps) => {
         </ToggleButton>
         <ToggleButton
           classes={{ root: classes.button }}
+          disabled={readOnly}
           value={'italic'}
           key={'italic'}
           onClick={() => {
